# CodePilot-AI

./: .gitignore  README.md  agent.py  app.py  pyproject.toml  rag.py  render.yaml  requirements-local.txt  requirements.txt  safety.py  utils.py  vercel.json
models/: base.py  gemini.py  openai_model.py
prompts/: ask.txt  debug.txt  explain.txt  generate.txt  optimize.txt  system_prompt.txt
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: conftest.py  test_helpers.py  test_safety.py
